Removed overflow bug no start page

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -429,7 +429,6 @@ body {
   height: auto;
   width: 100%;
   padding-bottom: 1rem;
-  overflow: hidden;
 }
 
 .home__tile--title {
@@ -450,23 +449,19 @@ body {
 }
 
 .home__tile--red, .home__tile--title {
-  background: linear-gradient(225deg, hsl(325deg, 79%, 44%) 0%, hsl(325deg, 79%, 44%) 9%, #fdfeff 9%, #fdfeff 100%);
-  border: 0.01rem solid hsl(325deg, 79%, 44%);
+  background: linear-gradient(225deg, hsl(325deg, 79%, 44%) 0%, hsl(325deg, 79%, 44%) 9%, #e8e8e8 9%, #e8e8e8 100%);
 }
 
 .home__tile--blue {
-  background: linear-gradient(225deg, hsl(199deg, 100%, 38%) 0%, hsl(199deg, 100%, 38%) 9%, #fdfeff 9%, #fdfeff 100%);
-  border: 0.01rem solid hsl(199deg, 100%, 38%);
+  background: linear-gradient(225deg, hsl(199deg, 100%, 38%) 0%, hsl(199deg, 100%, 38%) 9%, #e8e8e8 9%, #e8e8e8 100%);
 }
 
 .home__tile--green {
-  background: linear-gradient(225deg, hsl(169deg, 100%, 33%) 0%, hsl(169deg, 100%, 33%) 9%, #fdfeff 9%, #fdfeff 100%);
-  border: 0.01rem solid hsl(169deg, 100%, 33%);
+  background: linear-gradient(225deg, hsl(169deg, 100%, 33%) 0%, hsl(169deg, 100%, 33%) 9%, #e8e8e8 9%, #e8e8e8 100%);
 }
 
 .home__tile--yellow {
-  background: linear-gradient(225deg, hsl(45deg, 83%, 53%) 0%, hsl(45deg, 83%, 53%) 9%, #fdfeff 9%, #fdfeff 100%);
-  border: 0.01rem solid hsl(45deg, 83%, 53%);
+  background: linear-gradient(225deg, hsl(45deg, 83%, 53%) 0%, hsl(45deg, 83%, 53%) 9%, #e8e8e8 9%, #e8e8e8 100%);
 }
 
 #l-content-box {
